improved jump animation

--- a/index.html
+++ b/index.html
@@ -31,8 +31,6 @@
 		<div class="inner">
 			<h2>Instructions</h2>
 			<p>To start, choose a song from the list above. Clicking the song name will start the song.</p>
-
-
 			<ul id="key-controls">
 				<li class="item">
 					<h3 class="command">Play / Pause</h3>
@@ -49,11 +47,10 @@
 				</li>
 			</ul>
 			<footer>
-				<p>Created by <a href="http://thenateperry.com" target="_blank">Nate Perry</a> &amp; <a href="http://people.rit.edu/jml4020/309/Portfolio2/index.html" target="_blank">Justin Loucks</a></p>
+				<p>Created by <a href="http://thenateperry.com" target="_blank">Nate Perry</a></p>
 			</footer>
 		</div>
 	</div>
-
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script type="text/javascript" src="dancerjs/dancer.js"></script>
 	<script type="text/javascript" src="dancerjs/plugins/dancer.waveform.js"></script>
