--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	<title>Project 2</title>
+	<title>Music Jumper</title>
 	<link rel="stylesheet" href="styles.css" type="text/css" />
 </head>
 <body>
