updated Dancer.js to fix man bugs

--- a/dancerjs/examples/fft/index.html
+++ b/dancerjs/examples/fft/index.html
@@ -24,7 +24,7 @@
 		<script src="../../src/dancer.js"></script>
 		<script src="../../src/support.js"></script>
 		<script src="../../src/kick.js"></script>
-		<script src="../../src/adapterWebkit.js"></script>
+		<script src="../../src/adapterWebAudio.js"></script>
 		<script src="../../src/adapterMoz.js"></script>
 		<script src="../../src/adapterFlash.js"></script>
 		<script src="../../lib/fft.js"></script>
