Changed to open source songs, updated margins, added discalimer

--- a/index.html
+++ b/index.html
@@ -5,27 +5,26 @@
 	<link rel="stylesheet" href="styles.css" type="text/css" />
 </head>
 <body>
-	<div class="container">
-		<canvas id="canvas">Please install a modern browser.</canvas>
-		<div id="tracklist-container">
+	<canvas id="canvas">Please install a modern browser.</canvas>
+	<div id="tracklist-container">
+		<div class="inner">
 			<ul id="tracklist">
-				<li><a href="#Song" class="track" data-track-name="americas_son">America's Son by Air Review</a></li>
-				<li><a href="#Song" class="track" data-track-name="cradle">Cradle by The Joy Formidable</a></li>
-				<li><a href="#Song" class="track" data-track-name="day_tripper">Day Tripper by The Beatles</a></li>
-				<li><a href="#Song" class="track" data-track-name="rollin_over">Rollin' Over by Skinny Lister</a></li>
-				<li><a href="#Song" class="track" data-track-name="somebody_that_i_used_to_know">Somebody That I Used to Know by Gotye</a></li>
-				<li><a href="#Song" class="track" data-track-name="the_emasculated_man_and_the_city_that_swallowed_him">The Emasculate Man and the City that Swallowed Him by Quiet Company</a></li>
-				<li><a href="#Song" class="track" data-track-name="you_know_me">You Know Me by Air Traffic Controller</a></li>
+				<li><a href="#Song" class="track" data-track-name="OVERWERK - Buzzin'">Buzzin' by OVERWERK</a></li>
+				<li><a href="#Song" class="track" data-track-name="Dark Dark Dark - Bright Bright Bright">Bright Bright Bright by Dark Dark Dark </a></li>
+				<li><a href="#Song" class="track" data-track-name="Brave Bird - Scared Enough">Scared Enough by Brave Bird</a></li>
+				<li><a href="#Song" class="track" data-track-name="JJ Grey & Mofro - 99 Shades Of Crazy">99 Shades of Crazy by JJ Grey and Mofro</a></li>
+				<li><a href="#Song" class="track" data-track-name="The Toobes - On The Radio">On The Radio by The Toobes</a></li>
 			</ul>
+			<p>The music provided was legally downloaded from <a href="http://www.last.fm/music/+free-music-downloads">Last.FM</a>. I do not own the rights to any of these songs.</p>
 			<div class="panel-button">
 				<h3>Choose a Song</h3>
 			</div>
 		</div>
-		<div id="controls">
-			<audio id="audio" preload="auto" tabindex="0" controls="">
-			  Your browser does not support the audio element.
-			</audio>
-		</div>
+	</div>
+	<div id="controls">
+		<audio id="audio" preload="auto" tabindex="0" controls="">
+		  Your browser does not support the audio element.
+		</audio>
 	</div>
 	<div class="instruction-cta open">
 		<div class="inner">
@@ -49,6 +48,12 @@
 			<footer>
 				<p>Created by <a href="http://thenateperry.com" target="_blank">Nate Perry</a></p>
 			</footer>
+		</div>
+	</div>
+	<div class="mobile-warning">
+		<div class="inner">
+			<h1>Sorry</h1>
+			<p>Unfortunately this project does not work well on small devices.</p>
 		</div>
 	</div>
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
